fixed flickr icon text alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -380,19 +380,6 @@ textarea {
 .icon-google {
     background: url(../images/google-plus.svg);
 }
-/* .outercircle {
-    fill: #000000;
-}
-.outercircle:hover {
-    fill: #ee2375;
-}
-.innericon {
-    fill: #000000;
-}
-.innericon:hover {
-    fill: #58585a;
-}
-/*
 
 /* Social Icons
  * --------------------------------------- */
@@ -562,7 +549,8 @@ textarea {
 /* Photo Page
  * --------------------------------------- */
 .flickrtext {
-    font-size: 24px;
+    font-size: 25px;
+    margin-left: 15px;
 }
 .flickrouter {
     fill: #999999;
